variables.Variables.scala.error
Erreur de compilation :
Variables:12: error: not found: value defaFait
      defaFait = dejaFait + 1
      ^